--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Source+Code+Pro:wght@300&display=swap');
 *{
     margin: 0px;
     padding: 0px;
 }
 .sidebar{
-    background-color: red;
-    width: 15vw;
+    background-color: rgb(168, 165, 165); 
+    width: 13vw;
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
 }
@@ -18,9 +19,44 @@
     padding: 33px 0;
 }
 .main{
-    background-color: yellow;
+    /* background-color: yellow; */
     width: 90vw;
 }
 .contanier{
     display: flex;
+}
+.infocontainer{
+    background-color: rgb(207, 34, 77); 
+    height: 58vh;
+    width: 80vw;
+    margin: 144px auto;
+    display: flex;
+    justify-content: space-around;
+}
+.devInfo{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Source Code Pro', monospace;
+}
+.hello{
+    font-size: 65px;
+    
+}
+
+.name{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'Fira Sans', sans-serif;
+}
+
+.about{
+    font-size: 45px;
+}
+
+.buttons{}
+.devPic img{
+    height: 58vh;
+    
+    
 }
