--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -5,18 +5,22 @@
     padding: 0px;
 }
 .sidebar{
-    background-color: rgb(168, 165, 165); 
-    width: 13vw;
+    background-color: rgb(238, 238, 238); 
+    width: 434px;
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
 }
 .sidebar nav{
-    padding: 45px;
+    padding: 25px;
 }
 .sidebar nav li{
     list-style: none;
     font-size: 30px;
     padding: 33px 0;
+}
+.sidebar nav li a{
+    text-decoration: none;
+    color: black;
 }
 .main{
     /* background-color: yellow; */
@@ -26,7 +30,7 @@
     display: flex;
 }
 .infocontainer{
-    background-color: rgb(207, 34, 77); 
+    /* background-color: rgb(207, 34, 77);  */
     height: 58vh;
     width: 80vw;
     margin: 144px auto;
@@ -53,10 +57,57 @@
 .about{
     font-size: 45px;
 }
+.moreabout{
+    font-size: 22px;
+    margin-top: 23px;
+    font-family: 'Fira Sans', sans-serif;
 
-.buttons{}
+}
+
+.buttons{
+    margin-top: 34px;
+}
+.buttons button{
+    padding: 9px 14px ;
+    border-radius: 22px ;
+    color: white ;
+    background-color: dodgerblue;
+    font-weight: bold;
+    font-size: 21px;
+    margin: 0 3px;
+    cursor: pointer;
+}
+.buttons button:hover{
+    background-color: white;
+    color: dodgerblue;
+}
 .devPic img{
     height: 58vh;
     
     
+}
+.contactform{
+    font-family: 'Fira Sans', sans-serif;
+    padding: 0 34px;
+    padding-top: 144px;
+}
+.contactform h1{
+    font-family: 'Source Code Pro', monospace;
+    text-align: center;
+}
+.contactform form div{
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+}
+.contactform form div input{
+   width: 16vw;
+   border-radius: 5px;
+   margin: 6px 0;
+   padding: 3px;
+}
+#emailHelp{
+    font-size: 8px;
+    color: midnightblue;
+    margin: 0 5px;
 }
