--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -5,7 +5,7 @@
     padding: 0px;
 }
 .sidebar{
-    background-color: rgb(238, 238, 238); 
+    background-color: rgb(170, 169, 169); 
     width: 434px;
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
@@ -67,7 +67,7 @@
 .buttons{
     margin-top: 34px;
 }
-.buttons button{
+.btn{
     padding: 9px 14px ;
     border-radius: 22px ;
     color: white ;
@@ -77,7 +77,12 @@
     margin: 0 3px;
     cursor: pointer;
 }
-.buttons button:hover{
+.btn-sm{
+    font-size: 14px;
+    padding: 10px 19px;
+    margin: 12px 0;
+}
+.btn:hover{
     background-color: white;
     color: dodgerblue;
 }
@@ -93,7 +98,7 @@
 }
 .contactform h1{
     font-family: 'Source Code Pro', monospace;
-    text-align: center;
+    padding: 12px 0;
 }
 .contactform form div{
     padding: 10px 0;
@@ -101,13 +106,21 @@
     flex-direction: column;
 }
 .contactform form div input{
-   width: 16vw;
+   width: 26vw;
    border-radius: 5px;
-   margin: 6px 0;
+   margin: 6px 0 0 0;
    padding: 3px;
 }
 #emailHelp{
-    font-size: 8px;
+    font-size: 11px;
     color: midnightblue;
     margin: 0 5px;
+    padding: 3px 0 0 0;
+}
+#form-check {
+    flex-direction: row;
+}
+#form-check input{
+    width: 24px;
+    margin: 3px 0;
 }
