--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,35 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Source+Code+Pro:wght@300&display=swap');
-*{
+
+* {
     margin: 0px;
     padding: 0px;
 }
-.sidebar{
-    background-color: rgb(170, 169, 169); 
+
+.sidebar {
+    background-color: rgb(170, 169, 169);
     width: 434px;
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
+
 }
-.sidebar nav{
+
+.sidebar nav {
     padding: 25px;
 }
-.sidebar nav li{
+
+.sidebar nav li {
     list-style: none;
     font-size: 30px;
     padding: 33px 0;
 }
-.sidebar nav li a{
+
+.sidebar nav li a {
     text-decoration: none;
     color: black;
 }
-.main{
+
+.main {
     /* background-color: yellow; */
     width: 90vw;
 }
-.contanier{
+
+.contanier {
     display: flex;
 }
-.infocontainer{
+
+.infocontainer {
     /* background-color: rgb(207, 34, 77);  */
     height: 58vh;
     width: 80vw;
@@ -37,90 +46,175 @@
     display: flex;
     justify-content: space-around;
 }
-.devInfo{
+
+.devInfo {
     display: flex;
     justify-content: center;
     flex-direction: column;
     font-family: 'Source Code Pro', monospace;
-}
-.hello{
-    font-size: 65px;
-    
+    margin: 20px;
 }
 
-.name{
+.hello {
+    font-size: 65px;
+
+}
+
+.name {
     font-size: 50px;
     font-weight: bold;
     font-family: 'Fira Sans', sans-serif;
 }
 
-.about{
+.about {
     font-size: 45px;
 }
-.moreabout{
+
+.moreabout {
     font-size: 22px;
     margin-top: 23px;
     font-family: 'Fira Sans', sans-serif;
 
 }
 
-.buttons{
+.buttons {
     margin-top: 34px;
 }
-.btn{
-    padding: 9px 14px ;
-    border-radius: 22px ;
-    color: white ;
+
+.btn {
+    padding: 9px 14px;
+    border-radius: 22px;
+    color: white;
     background-color: dodgerblue;
     font-weight: bold;
     font-size: 21px;
     margin: 0 3px;
     cursor: pointer;
 }
-.btn-sm{
-    font-size: 14px;
-    padding: 10px 19px;
-    margin: 12px 0;
+
+.btn-sm {
+    font-size: 10px;
+    padding: 7px 13px;
+    margin: 10px 0;
 }
-.btn:hover{
+
+.btn:hover {
     background-color: white;
     color: dodgerblue;
 }
-.devPic img{
+
+.devPic img {
     height: 58vh;
-    
-    
+
+
 }
-.contactform{
+
+.contactform {
     font-family: 'Fira Sans', sans-serif;
     padding: 0 34px;
     padding-top: 144px;
 }
-.contactform h1{
+
+.contactform h1 {
     font-family: 'Source Code Pro', monospace;
     padding: 12px 0;
 }
-.contactform form div{
+
+.contactform form div {
     padding: 10px 0;
     display: flex;
     flex-direction: column;
 }
-.contactform form div input{
-   width: 26vw;
-   border-radius: 5px;
-   margin: 6px 0 0 0;
-   padding: 3px;
+
+.contactform form div input {
+    width: 26vw;
+    border-radius: 5px;
+    margin: 6px 0 0 0;
+    padding: 3px;
 }
-#emailHelp{
+
+#emailHelp {
     font-size: 11px;
     color: midnightblue;
     margin: 0 5px;
     padding: 3px 0 0 0;
 }
+
 #form-check {
     flex-direction: row;
 }
-#form-check input{
+
+#form-check input {
     width: 24px;
     margin: 3px 0;
+}
+
+.blogItem {
+    margin: 20px;
+    font-family: 'Fira Sans', sans-serif;
+
+}
+
+h1 {
+    font-family: 'Fira Sans', sans-serif;
+    margin: 23px;
+}
+
+p {
+    font-family: 'Source Code Pro', monospace;
+}
+
+.intro h2 {
+    font-family: 'Fira Sans', sans-serif;
+    margin: 12px;
+
+}
+
+.intro p {
+    font-family: 'Source Code Pro', monospace;
+    margin: 12px;
+}
+
+.skillcontainer {
+    padding: 12px;
+}
+
+.skillitem {
+    display: flex;
+    align-items: center;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 900;
+}
+
+.skill {
+    width: 265px;
+    height: 6px;
+    background-color: red;
+    border: 2px solid black;
+}
+
+.hundred {
+    width: 264px;
+    background-color: blueviolet;
+}
+
+.fifty {
+    width: 125px;
+    background-color: aqua;
+}
+
+.t5 {
+    width: 75px;
+    background-color: yellow;
+}
+
+@media(max-width: 1000px) {
+    * {
+        background-color: rgb(160, 76, 76);
+    }
+
+    .sidebar {
+        transform: translate(-443px, 0);
+        position: absolute;
+    }
 }
